--- a/pass/autofill/impl/src/main/res/values/strings.xml
+++ b/pass/autofill/impl/src/main/res/values/strings.xml
@@ -35,4 +35,14 @@
 
     <string name="bottomsheet_copy_password">Copy password</string>
     <string name="bottomsheet_copy_username">Copy username</string>
+
+    <string
+        name="autofill_cc_upgrade_dialog_title"
+        comment="Title of the dialog that will appear when the user clicks on Autofill credit card but is on Free plan"
+    >Autofill card details</string>
+
+    <string
+        name="autofill_cc_upgrade_dialog_message"
+        comment="Message of the dialog that will appear when the user clicks on Autofill credit card but is on Free plan"
+    >Autofilling credit card details is a paid feature. If you want Proton Pass to automatically enter your card details for you in apps and websites, please upgrade to a paid plan.</string>
 </resources>
