--- a/pass/feature-search-options/impl/src/main/res/values/strings.xml
+++ b/pass/feature-search-options/impl/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
 
 <resources>
     <string name="sort_by">Sort by</string>
+
+    <string name="item_type_filter_all">All</string>
+    <string name="item_type_filter_login">Login</string>
+    <string name="item_type_filter_alias">Alias</string>
+    <string name="item_type_filter_note">Note</string>
+    <string name="item_type_filter_credit_card">Card</string>
 </resources>
