--- a/pass/feature-search-options/impl/src/main/res/values/strings.xml
+++ b/pass/feature-search-options/impl/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
 
 <resources>
     <string name="sort_by">Sort by</string>
+    <string name="show" comment="label to show above the item type i.e. Show - All(10)">Show</string>
 
     <string name="item_type_filter_all">All</string>
     <string name="item_type_filter_login">Login</string>
