--- a/pass/feature-search-options/impl/src/main/res/values/strings.xml
+++ b/pass/feature-search-options/impl/src/main/res/values/strings.xml
@@ -21,8 +21,8 @@
     <string name="show" comment="label to show above the item type i.e. Show - All(10)">Show</string>
 
     <string name="item_type_filter_all">All</string>
-    <string name="item_type_filter_login">Login</string>
-    <string name="item_type_filter_alias">Alias</string>
-    <string name="item_type_filter_note">Note</string>
-    <string name="item_type_filter_credit_card">Card</string>
+    <string name="item_type_filter_login">Logins</string>
+    <string name="item_type_filter_alias">Aliases</string>
+    <string name="item_type_filter_note">Notes</string>
+    <string name="item_type_filter_credit_card">Credit cards</string>
 </resources>
