feat: add bulk option in trash bottomsheet

--- a/pass/feature-home/impl/src/main/res/values/strings.xml
+++ b/pass/feature-home/impl/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="bottomsheet_trash_all_items_title">Trash</string>
     <string name="bottomsheet_restore_all_items">Restore all items</string>
     <string name="bottomsheet_empty_trash">Empty trash</string>
+    <string name="bottomsheet_select_items">Select items</string>
 
     <string name="trash_error_clearing_trash">Error clearing trash</string>
     <string name="trash_success_restoring_items">Items restored</string>
