--- a/pass/feature-item-create/impl/src/main/res/values/strings.xml
+++ b/pass/feature-item-create/impl/src/main/res/values/strings.xml
@@ -39,6 +39,9 @@
     <string name="field_username_hint">Add username or email address</string>
     <string name="field_password_title">Password</string>
     <string name="field_password_hint">Add password</string>
+    <string name="field_password_label_strength_strong">Strong</string>
+    <string name="field_password_label_strength_vulnerable">Vulnerable</string>
+    <string name="field_password_label_strength_weak">Weak</string>
     <string name="field_website_address_title">Website</string>
     <string name="field_website_address_invalid">Invalid URL</string>
     <string name="field_website_address_hint">https://</string>
@@ -155,4 +158,10 @@
     <string name="select_suffix_upgrade_for_custom_domains">Upgrade for custom domains</string>
     <string name="select_mailbox_upgrade_for_more_inboxes">Upgrade for more inboxes</string>
     <string name="create_alias_content_limit_banner">You have reached the limit of aliases you can create. Create unlimited number of aliases when you upgrade your subscription.</string>
+
+    <!--  TOTP limit  -->
+    <string name="input_password_strength_strong">Strong</string>
+    <string name="input_password_strength_vulnerable">Vulnerable</string>
+    <string name="input_password_strength_weak">Weak</string>
+
 </resources>
