--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 
     <string name="restart_to_complete_the_update">Restart to complete the update</string>
     <string name="action_restart">Restart</string>
+
+    <string name="shortcut_share_logs_action_id" translatable="false">sharelogs</string>
+    <string name="shortcut_share_logs_title">Share logs</string>
 </resources>
