chore: add see all pins ui

--- a/pass/compose-components/impl/src/main/res/values/strings.xml
+++ b/pass/compose-components/impl/src/main/res/values/strings.xml
@@ -103,4 +103,7 @@
     <string name="label_password_strength_vulnerable">Vulnerable</string>
     <string name="label_password_strength_weak">Weak</string>
 
+    <!-- Pinning -->
+    <string name="pinning_carousel_see_all">See all</string>
+
 </resources>
