--- a/pass/compose-components/impl/src/main/res/values/strings.xml
+++ b/pass/compose-components/impl/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="bottomsheet_confirm_button">Confirm</string>
     <string name="bottomsheet_cancel_button">Cancel</string>
     <string name="bottomsheet_move_to_trash">Move to trash</string>
+    <string name="bottomsheet_pin_item">Pin</string>
+    <string name="bottomsheet_unpin_item">Unpin</string>
 
     <!-- Actions -->
     <string
