--- a/pass/feature-home/impl/src/main/res/values/strings.xml
+++ b/pass/feature-home/impl/src/main/res/values/strings.xml
@@ -139,4 +139,13 @@
     <string name="recent_search_header_count">Recent searches</string>
     <string name="recent_search_clear">Clear</string>
     <string name="recent_search_remove_item">Remove from recent searches</string>
+
+    <!-- Pinning -->
+    <string name="home_snackbar_items_pinned_success">Items pinned successfully</string>
+    <string name="home_snackbar_items_pinned_partial_success">Error pinning some of the items</string>
+    <string name="home_snackbar_items_pinned_error">Error pinning the items</string>
+
+    <string name="home_snackbar_items_unpinned_success">Items unpinned successfully</string>
+    <string name="home_snackbar_items_unpinned_partial_success">Error unpinning some of the items</string>
+    <string name="home_snackbar_items_unpinned_error">Error unpinning the items</string>
 </resources>
