--- a/pass/compose-components/impl/src/main/res/values/strings.xml
+++ b/pass/compose-components/impl/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <!-- List header results -->
     <string name="item_list_header_all_search_results">All</string>
+    <string name="item_list_header_pinned_search_results">Pinned</string>
     <string name="item_list_header_logins_type">Logins</string>
     <string name="item_list_header_aliases_type">Aliases</string>
     <string name="item_list_header_notes_type">Notes</string>
