--- a/pass/feature-home/impl/src/main/res/values/strings.xml
+++ b/pass/feature-home/impl/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="search_topbar_placeholder_all_vaults">Search in all vaults…</string>
     <string name="search_topbar_placeholder_vault">Search in %s…</string>
     <string name="search_topbar_placeholder_trash">Search in Trash…</string>
+    <string name="search_topbar_placeholder_pinning">Search in Pinned…</string>
     <string name="item_type_filter_list_icon_content_description">Item type icon</string>
     <string name="item_type_filter_all">All</string>
     <string name="item_type_filter_login">Login</string>
