--- a/pass/autofill/impl/src/main/res/values/strings.xml
+++ b/pass/autofill/impl/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="error_credentials_not_found">No matching credentials found</string>
     <string name="error_loading_items">Could not load the items</string>
     <string name="topbar_search_query">Search in all vaults…</string>
+    <string name="topbar_search_pinned_items">Search in Pinned…</string>
     <string name="topbar_search_query_oldest_vaults">Search in your oldest vaults…</string>
     <string name="topbar_search_query_uninitialized" comment="Placeholder string before we know where we're searching (all vaults, oldest vaults, etc.)">Search…</string>
     <string name="inline_suggestions_open_app">Open Proton Pass</string>
