--- a/pass/feature-item-create/impl/src/main/res/values/strings.xml
+++ b/pass/feature-item-create/impl/src/main/res/values/strings.xml
@@ -156,4 +156,8 @@
     <string name="select_mailbox_upgrade_for_more_inboxes">Upgrade for more inboxes</string>
     <string name="create_alias_content_limit_banner">You have reached the limit of aliases you can create. Create unlimited number of aliases when you upgrade your subscription.</string>
 
+    <string
+        name="snackbar_update_app_to_update_item"
+        comment="This message will appear to users that try to update an item that needs a newer version of the app to do so"
+    >The app needs to be updated to edit this item</string>
 </resources>
