refactor: replace hardcoded strings by string resources

--- a/pass/feature-item-detail/impl/src/main/res/values/strings.xml
+++ b/pass/feature-item-detail/impl/src/main/res/values/strings.xml
@@ -107,6 +107,10 @@
     <string name="item_detail_cannot_perform_action_share_no_permissions_message">You don\'t have enough permissions to share this vault.</string>
     <string name="item_detail_cannot_perform_action_share_limit_reached">You have reached vault sharing limit. In order to share more vaults, please upgrade your current plan.</string>
 
+    <string name="item_detail_history_created">Created</string>
+    <string name="item_detail_history_modified_last">Last modified</string>
+    <string name="item_detail_history_button_view">View item history</string>
+
     <string name="password_score_vulnerable">Vulnerable</string>
     <string name="password_score_weak">Weak</string>
     <string name="password_score_strong">Strong</string>
