feat(home): show upgrade banner

--- a/pass/compose-components/impl/src/main/res/values/strings.xml
+++ b/pass/compose-components/impl/src/main/res/values/strings.xml
@@ -106,4 +106,9 @@
     <!-- Pinning -->
     <string name="pinning_carousel_see_all">See all</string>
 
+    <string
+        name="home_app_needs_update_message"
+        comment="Message displayed when the app needs to be updated"
+    >You are using a version of the app that is too old. In order to use the latest features, please update your app.</string>
+
 </resources>
